# rslvd

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
config/: dns-server.service  dns_server.conf
monitoring/: dns_serve_rules.yml  prometheus.yml
scripts/: backup.sh  install.sh
src/: dns_packet.cpp  dns_packet.h  dns_record.cpp  dns_record.h  main.cpp  rslvd.cpp  rslvd.h  utils.h
src/config/: config_manager.cpp  config_manager.h
src/monitoring/: logger.cpp  logger.h
src/security/: acl.cpp  acl.h  auth_manager.h  crypto_utils.cpp  crypto_utils.h  rate_limiter.cpp  rate_limiter.h
src/utils/: dns_cache.cpp  dns_cache.h  thread_pool.cpp  thread_pool.h  utils.h
